# onveef

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release.yml
src/onveef/: __init__.py  aclient.py  breaker.py  client.py  envelopes.py  exceptions.py  models.py  pacs.py  parsers.py  wsdiscovery.py
tests/: test_async.py  test_client.py  test_envelopes.py  test_extensions.py  test_extras.py  test_fixtures.py  test_hardening.py  test_media2_events.py  test_models.py  test_pacs.py  test_parsers.py  test_wsdiscovery.py
tests/fixtures/: README.md
tests/fixtures/axis/: GetSystemDateAndTime.xml
tests/fixtures/dahua/: GetProfiles.xml
tests/fixtures/hikvision/: GetDeviceInformation.xml  GetProfiles.xml
tests/fixtures/reolink/: GetStreamUri.xml
